[package]
name = "turtle-core-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0" }
turtle-protocol = { git = "ssh://git@gitlab.com/level9turtles/turtle_chat/turtle-protocol.git", version = "0.1.5" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
anyhow = "1.0.80"
futures-channel = "0.3.30"
futures-util = "0.3.30"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
